solve roles